# curso_devops_receitas

./: README.md  azure-pipelines.yml  compose.yaml
.github/workflows/: deploy_manual.yml  deploy_tag.yml  lint.yml  lint_pr.yml
proxy/: Dockerfile  nginx.conf
python/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-entrypoint.sh  pyproject.toml
python/config/: flake8.ini
python/src/app/data_source/: ingredient_data_source.py  recipee_data_source.py
python/src/app/entity/: base.py  ingredient.py  recipee.py
python/src/app/errors/: custom_error.py
python/src/app/usecase/: create_recipee.py  delete_ingredients.py  delete_recipees.py  read_ingredients.py  read_recipees.py  update_ingredient.py  update_recipee.py  update_recipee_ingredient.py
python/src/infra/api/: FastAPI.py  FastAPIErrorHandler.py
python/src/infra/api/observability/: __init__.py  logs.py  metrics.py
python/src/infra/controller/: __init__.py  ingredient_crud.py  recipee_crud.py
python/src/infra/data_source/: ingredient_local_data_source.py  recipee_local_data_source.py
scripts/: trigger_deploy_tag_workflow.sh
