[project]
name = "curso-devops"
version = "0.1.0"
description = ""
authors = [{ name = "eddcorts", email = "edfmcortes@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi (>=0.115.12,<0.116.0)", "pydantic (>=2.11.3,<3.0.0)"]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
flake8-blind-except = "^0.2.1"
flake8-bugbear = "^24.12.12"
flake8-comprehensions = "^3.16.0"
flake8-docstrings = "^1.7.0"
flake8-length = "^0.3.1"
flake8-use-fstring = "^1.4"
isort = "^6.0.1"
mypy = "^1.15.0"
pep8-naming = "^0.14.1"
pre-commit = "^4.2.0"
poethepoet = "^0.34.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks]
pre_commit = { cmd = "poetry run pre-commit run", help = "Run pre-commit check in staged files" }
pre_commit_all = { cmd = "poetry run pre-commit run --all-files", help = "Run pre-commit check in all files" }
pre_commit_setup = { cmd = "poetry run pre-commit install --overwrite", help = "Install pre-commit hooks" }


[tool.black]
color = true
line-length = 88
target-version = ["py313"]

[tool.isort]
atomic = true
include_trailing_comma = true
multi_line_output = 3
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
error_summary = true
implicit_reexport = false
no_implicit_optional = true
plugins = ["pydantic.mypy"]
pretty = true
python_version = "3.13"
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_typed = true
warn_untyped_fields = true
